# SloggerG6_EC800GFW

./: .gitignore  README.md  VN2001 cover design 200604.cdr
EC800GCN_LD/: CMakeLists.txt  Kconfig  build_all.bat  build_check.py
EC800GCN_LD/cmake/: extension.cmake  toolchain-gcc.cmake
EC800GCN_LD/components/: CMakeLists.txt
EC800GCN_LD/components/apploader/: CMakeLists.txt
EC800GCN_LD/components/apploader/pack/: CMakeLists_8850.txt  CMakeLists_8910.txt  app_fileimg.ld  app_flashimg.ld  core_filelist.xml  hello_world.c
EC800GCN_LD/components/apploader/src/: app_loader.c  core_config.cmake.in  core_export.list
EC800GCN_LD/components/appstart/: CMakeLists.txt  Kconfig
EC800GCN_LD/components/appstart/include/: app_config.h.in
EC800GCN_LD/components/appstart/src/: app_start_8850.c
EC800GCN_LD/components/atr/: CMakeLists.txt  Kconfig  core.cmake
EC800GCN_LD/components/atr/include/: at_cfg.h  at_command.h  at_engine.h  at_param.h  at_response.h  atr_config.h.in
EC800GCN_LD/components/ats/: CMakeLists.txt  Kconfig  core.cmake
EC800GCN_LD/components/ats/audio/: Kconfig
EC800GCN_LD/components/ats/cam/: Kconfig
EC800GCN_LD/components/ats/cc/: Kconfig
EC800GCN_LD/components/ats/coap/: Kconfig
EC800GCN_LD/components/ats/dm/: Kconfig
EC800GCN_LD/components/ats/ftp/: Kconfig
EC800GCN_LD/components/ats/gprs/: Kconfig
EC800GCN_LD/components/ats/http/: Kconfig
EC800GCN_LD/components/ats/include/: at_cfw.h  at_cfw_log.h  at_cmd_alic.h  at_cmd_audio.h  at_cmd_coap.h  at_cmd_dm.h  at_cmd_ftp.h  at_cmd_gc.h  at_cmd_gprs.h  at_cmd_iperf.h  at_cmd_loc.h  at_cmd_myftp.h  at_cmd_newftp.h  at_cmd_nw.h  at_cmd_nw_cus.h  at_cmd_simlock.h  at_cmd_sms.h  at_cmd_ss.h  at_cmd_ssim.h  at_cmd_tcpip.h  at_mn.h  at_pm.h  ats_config.h.in
EC800GCN_LD/components/ats/lwm2m/: Kconfig
EC800GCN_LD/components/ats/misc/: Kconfig
EC800GCN_LD/components/ats/mqtt/: Kconfig
EC800GCN_LD/components/ats/sms/: Kconfig
EC800GCN_LD/components/ats/tcpip/: Kconfig
EC800GCN_LD/components/ats/wifi/: Kconfig
EC800GCN_LD/components/audio/: CMakeLists.txt  Kconfig  core.cmake
EC800GCN_LD/components/audio/include/: audio_config.h.in  audio_decoder.h  audio_device.h  audio_encoder.h  audio_ktdetect.h  audio_player.h  audio_reader.h  audio_resample.h  audio_types.h  audio_writer.h  sbc.h
EC800GCN_LD/components/aworker/: CMakeLists.txt  core.cmake
EC800GCN_LD/components/aworker/include/: async_worker.h  aworker_config.h.in
EC800GCN_LD/components/bootloader/: CMakeLists.txt  Kconfig
EC800GCN_LD/components/bootloader/8850/: boot_platform.c  boot_secure.c  boot_start.c  fdl.c  spl_start.c
EC800GCN_LD/components/bootloader/flash_test_fdl/: flash_test_main.c
EC800GCN_LD/components/bootloader/include/: boot_config.h.in  boot_efuse.h  boot_fdl.h  boot_fdl_channel.h  boot_lcd.h  boot_mmu.h  boot_platform.h  boot_rng.h  boot_secure.h  boot_timer.h  boot_unity.h  tfm_boot_data.h
EC800GCN_LD/components/bootloader/ldscripts/: psramrun_8850.ld  ramrun_8811.ld  ramrun_8850.ld  ramrun_8910.ld
EC800GCN_LD/components/bootloader/src/: boot_delay.c  boot_efuse.c  boot_entry_v7a.S  boot_entry_v8m.S  boot_fdl.c  boot_fdl_dnld_8910.c  boot_ifc_uart.c  boot_irq_gic.c  boot_irq_nvic.c  boot_lcd.c  boot_mem.c  boot_mmu.c  boot_override.c  boot_pdl.c  boot_pdl_uimage.c  boot_sffs_port.c  boot_spi_flash.c  boot_timer.c  boot_trace.c  boot_uart.c  boot_udc.c  boot_unity.c  boot_usb_fdl_channel.c  boot_userial.c  boot_vfs.c
EC800GCN_LD/components/calclib/: CMakeLists.txt  core.cmake  core_crc.cmake
EC800GCN_LD/components/cfw/: CMakeLists.txt  Kconfig  core.cmake
EC800GCN_LD/components/cfw/include/: cfw.h  cfw_cc.h  cfw_chset.h  cfw_config.h.in  cfw_dispatch.h  cfw_event.h  cfw_nb_nv_api.h  cfw_sms.h  cfw_tools.h  cfw_utility.h  modem_itf.h
EC800GCN_LD/components/chip/: Kconfig  chip.cmake  chip_8850.cmake
EC800GCN_LD/components/diag/: CMakeLists.txt  Kconfig  core.cmake
EC800GCN_LD/components/diag/include/: diag.h  diag_at.h  diag_calib_handle.h  diag_config.h.in  diag_nw.h
EC800GCN_LD/components/driver/: CMakeLists.txt  Kconfig  core.cmake
EC800GCN_LD/components/driver/include/: drv_adc.h  drv_axidma.h  drv_backlight.h  drv_camera.h  drv_charger.h  drv_config.h.in  drv_debug_port.h  drv_efuse.h  drv_emmc.h  drv_ether.h  drv_gpio.h  drv_gpt.h  drv_i2c.h  drv_i2s.h  drv_ifc.h  drv_infra.h  drv_keypad.h  drv_lcd.h  drv_lcd_defs.h  drv_lcd_v2.h  drv_md_ipc.h  drv_names.h  drv_pmic_intr.h  drv_ps_path.h  drv_pwm.h  drv_pwrkey_internal.h  drv_sdio.h  drv_sdmmc.h  drv_sdmmc_imp.h  drv_secure.h  drv_soc_id.h  (+8 more)
EC800GCN_LD/components/firmwareupdate/: CMakeLists.txt  Kconfig  core.cmake
EC800GCN_LD/components/fs/: CMakeLists.txt  Kconfig  core.cmake
EC800GCN_LD/components/gnss/: CMakeLists.txt  Kconfig  libgnssmgt.cmake
EC800GCN_LD/components/hal/: CMakeLists.txt  Kconfig  core.cmake
EC800GCN_LD/components/kernel/: CMakeLists.txt  Kconfig  core.cmake  core_osi_lib.cmake
EC800GCN_LD/components/lcdpanel/: CMakeLists.txt  core.cmake
EC800GCN_LD/components/lpa/: CMakeLists.txt  Kconfig
EC800GCN_LD/components/lz4/: CMakeLists.txt  README.md
EC800GCN_LD/components/mal/: CMakeLists.txt  Kconfig  core.cmake
EC800GCN_LD/components/ml/: CMakeLists.txt  core.cmake
EC800GCN_LD/components/nanopb/: CMakeLists.txt  core.cmake
EC800GCN_LD/components/net/: CMakeLists.txt  Kconfig  core.cmake
EC800GCN_LD/components/nvm/: CMakeLists.txt  Kconfig  core.cmake
EC800GCN_LD/components/pam/: CMakeLists.txt  Kconfig  core.cmake
EC800GCN_LD/components/ql-application/: CMakeLists.txt  ql_app_feature_config.cmake  ql_app_feature_config.h.in
EC800GCN_LD/components/ql-kernel/: CMakeLists.txt  Kconfig
EC800GCN_LD/components/rpc/: Kconfig
EC800GCN_LD/components/service/: CMakeLists.txt  Kconfig  core.cmake
EC800GCN_LD/components/tb/: CMakeLists.txt  core.cmake
EC800GCN_LD/components/unity/: CMakeLists.txt  core.cmake
EC800GCN_LD/tools/: SimlockInsKey.py  build_all_target.sh  codesize.py  deliverpack.py  iomuxgen.py  launch.bat  launch.sh  modemgen.py  norpropgen.py  pacgen.py  partinfogen.py
(+2621 files in other folders)
